--- a/static/css/index.css
+++ b/static/css/index.css
@@ -134,11 +134,10 @@ body {
 }
 
 .highlight-neurips {
-    color: #e74c3c; /* Choose a nice, attention-catching color like red */
-    font-weight: bold; /* Make it bold for emphasis */
-    font-size: 1.2em; /* Slightly larger font size */
-    margin-top: 10px; /* Add some space above */
+    color: #e74c3c; /* Attention-catching color */
+    font-weight: 900; /* Extra bold text */
+    font-size: 1.5em; /* Larger font size */
+    margin-top: 10px; /* Space above */
+    margin-bottom: 10px; /* Space below */
     display: inline-block; /* Keep it in the same line */
 }
-
-
