--- a/static/css/index.css
+++ b/static/css/index.css
@@ -175,6 +175,8 @@ body {
   display: inline-block; /* Make the caption inline with the image */
   max-width: 100%; /* Limit the width of the caption */
   margin: 0 auto 0px auto; /* Center the caption and add more margin below */
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .icons-row {
